<resources>
    <string name="app_name">Book Selling App</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">favourites</string>
    <string name="profile">profile</string>
    <string name="about">About</string>
    <string name="Profile">Profile</string>
    <string name="Favourites">Favourites</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="opendrawer">Open drawer</string>
    <string name="closedrawer">Close drawer</string>
    <string name="dark_mode">Dark mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="favourites_fragment">Favourites fragment</string>
    <string name="Profile_fragment">Profile Fragment</string>
    <string name="About_fragment">About Fragment</string>
    <string name="checkConnMSG">Check Connectivity</string>
    <string name="price_of_book">299</string>
    <string name="name_of_the_author">authName</string>
    <string name="name_of_book">book name</string>
    <string name="action_sort">Sort</string>
</resources>