<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"
        />

    <item
        android:id="@+id/favourites"
        android:title="@string/Favourites"
        android:icon="@drawable/ic_fav"/>

    <item
        android:id="@+id/profile"
        android:title="@string/Profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_about"/>
    <!--item
        android:id="@+id/themeSet"
        android:title="@string/dark_mode"
        android:icon="@drawable/ic_darktheme"/>

    <item
        android:id="@+id/checkConnMenu"
        android:title="@string/checkConnMSG"
        android:icon="@drawable/ic_wifi"/-->
    </group>

</menu>